--- a/admin.html
+++ b/admin.html
@@ -8,8 +8,36 @@
     <link rel="stylesheet" href="css/admin.css">
 </head>
 <body>
-    <!-- Header -->
-    <div id="header-container"></div>
+        <!-- Header / Login Panel -->
+        <div style="padding:18px;background:#f8fafc;border-bottom:1px solid #e9eef6;">
+            <div style="display:flex;align-items:center;justify-content:space-between;max-width:1100px;margin:0 auto;">
+                <div>
+                    <h3 style="margin:0;color:#1f2937">KSFP Admin</h3>
+                    <small style="color:#6b7280">Admin panel — sign in to continue</small>
+                </div>
+                <!-- Inline login panel -->
+                <div class="login-panel card p-3" style="max-width:420px;">
+                    <h5 class="mb-2" style="margin:0 0 8px 0">Sign in</h5>
+
+                    <div class="mb-2">
+                        <label class="form-label">Phone number</label>
+                        <input id="login-phone" class="form-control" placeholder="+2547..." />
+                    </div>
+                    <div class="d-flex gap-2 mb-3">
+                        <button id="send-otp-btn" class="btn btn-primary">Send OTP</button>
+                        <input id="otp-input" class="form-control" placeholder="Enter OTP" style="max-width:140px" />
+                        <button id="verify-otp-btn" class="btn btn-success">Verify</button>
+                    </div>
+
+                    <div class="text-center my-2">or</div>
+                    <div class="d-grid">
+                        <button id="google-login-btn" class="btn btn-outline-dark">Continue with Google</button>
+                    </div>
+
+                    <div id="login-msg" style="margin-top:12px;font-size:13px;color:#555"></div>
+                </div>
+            </div>
+        </div>
 
     <div class="container-fluid mt-5">
         <div class="row">
