Add terms viewer and make Terms UX responsive/collapsible

--- a/public/terms-summary.html
+++ b/public/terms-summary.html
@@ -18,37 +18,36 @@
       <h1>Terms & Conditions — Plain Language Summary</h1>
       <p>Welcome — this page highlights the most important points so you can get started quickly. It is not the full legal text; a link to the full Terms follows each section.</p>
 
-      <div class="section">
-        <h3>What is KSFP?</h3>
-        <p>KSFP is a platform that helps parents and schools manage school fee payments and records. We provide interfaces for initiating payments, viewing receipts, and managing uploads.</p>
+      <div class="section collapsible">
+        <h3 class="heading">What is KSFP? <button class="toggle">Toggle</button></h3>
+        <div class="body">KSFP is a platform that helps parents and schools manage school fee payments and records. We provide interfaces for initiating payments, viewing receipts, and managing uploads.</div>
       </div>
 
-      <div class="section">
-        <h3>Payments</h3>
-        <p>Payments can be made via supported providers (online) or by paying into a KCB Paybill for manual processing.</p>
-        <div class="paybox">
-          <strong>KCB Paybill:</strong> 522522 — <strong>Account:</strong> 0768331888
-        </div>
+      <div class="section collapsible">
+        <h3 class="heading">Payments <button class="toggle">Toggle</button></h3>
+        <div class="body">Payments can be made via supported providers (online) or by paying into a KCB Paybill for manual processing.
+        <div class="paybox" style="margin-top:8px"><strong>KCB Paybill:</strong> 522522 — <strong>Account:</strong> 0768331888</div>
         <p style="margin-top:8px">After you make a KCB Paybill payment, keep your receipt and follow the platform instructions to mark the invoice as paid or upload proof if requested by the school.</p>
+        </div>
       </div>
 
-      <div class="section">
-        <h3>Privacy & Data</h3>
-        <p>We collect your name, phone number and email to authenticate you and send payment notifications. We store only what we need and do not sell your data.</p>
+      <div class="section collapsible">
+        <h3 class="heading">Privacy & Data <button class="toggle">Toggle</button></h3>
+        <div class="body">We collect your name, phone number and email to authenticate you and send payment notifications. We store only what we need and do not sell your data.</div>
       </div>
 
-      <div class="section">
-        <h3>Your responsibilities</h3>
-        <ul>
+      <div class="section collapsible">
+        <h3 class="heading">Your responsibilities <button class="toggle">Toggle</button></h3>
+        <div class="body"><ul>
           <li>Provide accurate contact and payment information.</li>
           <li>Keep your login secure and do not share passwords.</li>
           <li>Keep receipts for any manual payments (e.g., Paybill).</li>
-        </ul>
+        </ul></div>
       </div>
 
-      <div class="section">
-        <h3>Disputes & Liability</h3>
-        <p>KSFP acts as the platform. Schools and payment providers are responsible for issuing final receipts. If there's a dispute about a payment, contact the school and provide your receipt; we will assist where appropriate.</p>
+      <div class="section collapsible">
+        <h3 class="heading">Disputes & Liability <button class="toggle">Toggle</button></h3>
+        <div class="body">KSFP acts as the platform. Schools and payment providers are responsible for issuing final receipts. If there's a dispute about a payment, contact the school and provide your receipt; we will assist where appropriate.</div>
       </div>
 
       <div class="section">
@@ -60,5 +59,25 @@
         <a href="/docs/terms-and-conditions.md" target="_blank" style="color:#0366d6">Open full legal terms</a>
       </div>
     </div>
+    <script>
+      // Collapsible sections for mobile
+      (function(){
+        function init(){
+          const collapsibles = document.querySelectorAll('.section.collapsible');
+          collapsibles.forEach(section=>{
+            const btn = section.querySelector('.toggle');
+            const body = section.querySelector('.body');
+            if(!btn || !body) return;
+            // start collapsed on small screens
+            if(window.innerWidth < 640) body.style.display = 'none';
+            btn.addEventListener('click', ()=>{
+              body.style.display = (body.style.display === 'none') ? 'block' : 'none';
+              btn.textContent = (body.style.display === 'none') ? 'Show' : 'Hide';
+            });
+          });
+        }
+        if(document.readyState === 'loading') document.addEventListener('DOMContentLoaded', init); else init();
+      })();
+    </script>
   </body>
 </html>
